<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".About">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/welcome_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:padding="@dimen/padding"
                android:text="@string/welcome_to_summertech_a_software_company"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/whatis_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/what_is_summertech"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descri_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/summertech_is_a_software_company_that_helps_those_who_own_small_business_to_go_online_and_realize_full_potential_of_their_business_and_hence_increase_profit" />

            <TextView
                android:id="@+id/whenstarted_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/when_was_summmertech_started"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/whenstarted_descrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/summertech_began_back_in_2021_when_a_campus_student_tried_to_compare_what_brings_the_big_margin_between_the_big_companies_and_small_scale_business" />

            <TextView
                android:id="@+id/founder_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/founder"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/founder_descrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/onesmus_is_the_founder_of_this_summertech_see_his_photo_below" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="315dp"
                app:srcCompat="@drawable/summertech" />

            <TextView
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/visit_my_website_for_more_details"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wed_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:padding="40dp"
                android:text="@string/onescode_cf" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>